holos/deploy/clusters/k3d-holos/components/holos-authenticator/deployment-holos-authenticator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: holos-authenticator
  name: holos-authenticator
  namespace: holos-authenticator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: holos-authenticator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: holos-authenticator
    spec:
      containers:
      - args:
        - --leader-elect
        - --health-probe-bind-address=:8081
        - --metrics-bind-address=:8080
        - --grpc-bind-address=:9000
        image: quay.holos.internal/holos/holos-authenticator:dev
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
        name: manager
        ports:
        - containerPort: 9000
          name: grpc
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 8081
          name: health
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: holos-authenticator
      terminationGracePeriodSeconds: 10
