holos/deploy/clusters/k3d-holos/components/holos-authenticator/service-holos-authenticator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: holos-authenticator
  name: holos-authenticator
  namespace: holos-authenticator
spec:
  ports:
  - name: grpc
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: holos-authenticator
